feat: Zé da Entrega — app completo offline-first
Fork Zé do Bip para motoristas de entrega.
Fluxo: LOGIN > SYNC DOWN > CARGA > CLIENTES > VOLUMES > SYNC UP

- 5 telas: Carga, Clientes, Cliente, Volumes, Faltantes
- EntregaContext + EntregaRepository (SQLite offline)
- EntregaApiService com DEV_MODE (mock data)
- 6 tabelas SQLite, scanner USB, feedback bipagem
- Guia de teste local incluido

Zé da Entrega v1.0 — Grupo Bueno

--- a/app-configs/app-development.json
+++ b/app-configs/app-development.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Zé do Bip - DEV",
-    "slug": "ze-do-beep-dev",
+    "name": "Zé da Entrega - DEV",
+    "slug": "ze-da-entrega-dev",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
