--- a/app-configs/app-production.json
+++ b/app-configs/app-production.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Zé do Bip - Galpão",
-    "slug": "ze-do-beep-galpao",
+    "name": "Zé da Entrega",
+    "slug": "ze-da-entrega",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
